fix z-index for the search form

--- a/frontend/src/Pages/SearchPage.module.scss
+++ b/frontend/src/Pages/SearchPage.module.scss
@@ -5,6 +5,15 @@
   @media only screen and (min-width: 1180px) {
     & {
       margin-top: -64px;
+      input[type='submit'],
+      input[type='search'], {
+        z-index: 100;
+      }
+    }
+
+    .stats {
+      z-index: 100;
+      position: relative;
     }
   }
 
@@ -13,7 +22,9 @@
     margin-bottom: 16px;
   }
 
-  input[type='text'] {
+  input[type='text'],
+  input[type='search']
+  {
     width: 100%;
     display: block;
     box-sizing: border-box;
